tests/errors/type_mismatch_subtraction.dang
# Test subtraction type mismatch
pub result = "hello" - 42